# Root-Agency

./: .dockerignore  .env.example  .gitignore  Dockerfile  SQLQueryTOOL.py  main.py  pyproject.toml  repomix-output.txt  requirements.txt  retail_agency_threads.json  settings.json  setup.py
inventory_results/: query_results_20250210_065427.csv  query_results_20250210_065427.json
negative_inventory_report/: query_results_20250212_015039.csv  query_results_20250212_015039.json
retail_agency/: .env  __init__.py  _slack_handler_.py  agency.py  agency_manifesto.md  app.py  credentials.json  google-credentials.json  main.py  ngrok.yml  requirements.txt  retail_agency_threads.json  settings.json  test_ceo_interaction.py  test_db_connection.py  test_notion.py  test_reporting_manager.py  test_reporting_manager_connection.py
retail_agency.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
retail_agency/ceo/: ceo.py  instructions.md
retail_agency/ceo/tools/: GetDate.py  GoogleDriveTool.py  NotionPoster.py  NotionTool.py  SlackCommunicator.py  TaskManager.py
retail_agency/reporting_manager/: __init__.py  instructions.md  reporting_manager.py  test_reporting_manager.py
retail_agency/reporting_manager/tools/: CloudStorageTool.py  DataAnalyzer.py  FileReaderTool.py  GoogleDriveTool.py  __init__.py  (+6 more)
retail_agency/utils/: db_connection.py  firebase_db.py  slack_handler.py
weekly_revenue_results/: query_results_20250212_070357.csv
zero_inventory_results/: query_results_20250211_130406.csv  query_results_20250211_130406.json  query_results_20250212_070055.csv
(+6 files in other folders)
